--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
-h1 {
+#definitionPanel {
+  display: none;
+}
+
+#conceptPanel {
+  display: none;
+}
+h1, p {
   text-align: center;
 }
 .container {
